added some files

--- a/chicken.html
+++ b/chicken.html
@@ -1,46 +1,119 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <title>My first document</title>
+</head>
+
 <body>
+    <nav>
+        <ul>
+            <li><a href="">Alternative 1</a></li>
+            <li><a href="">Alternative 2</a></li>
+        </ul>
 
-    <head>
-        <title>My first document</title>
-    </head>
-    <h1>Pangolin</h1>
-    <a href="http://wwww.facebook.com">I am a link!</a>
-    <a href="about.html">Go to About page</a>
+    </nav>
+    <main>
+        <h1>Pangolin</h1>
+        <hr>
+        <p>Some text</p>
+        <br>
+        <p>some more text</p>
+        <a href="http://wwww.facebook.com">I am a link!</a>
+        <a href="about.html">Go to About page</a>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Chickens_in_market.jpg/1200px-Chickens_in_market.jpg"
+            alt="">
+        <!-- This is a comment -->
+        <div>
+            <p>This is <span>text</span> </p>
+            <img src="http://upload.wikimedia.org/wikipedia/commons/e/e3/Paulgraham_240x320.jpg" alt="">
+        </div>
+
+        <h2>Intro</h2>
+        <p>Pangolins, sometimes known as scaly anteaters, are mammals of the order Pholidota (from Ancient Greek φολῐ́ς,
+            "horny scale"). The one extant family, Manidae, has three genera: Manis, Phataginus and Smutsia. Manis
+            comprises
+            the four species found in Asia, while Phataginus and Smutsia include two species each, all found in
+            Sub-Saharan
+            Africa. These species range in size from 30 to 100 cm (12 to 39 in). A number of extinct pangolin species
+            are
+            also known.</p>
+        <h2>Description</h2>
+        <p>Pangolins have large, protective keratin scales covering their skin; they are the only known mammals with
+            this
+            feature. They live in hollow trees or burrows, depending on the species. Pangolins are nocturnal, and their
+            diet
+            consists of mainly ants and termites, which they capture using their long tongues. They tend to be solitary
+            animals, meeting only to mate and produce a litter of one to three offspring, which they raise for about two
+            years.
+        </p>
+        <h2>Poaching</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad illum quas ab ipsam saepe. Itaque, minus! Numquam
+            nemo dolores natus provident, commodi, esse repudiandae sit amet temporibus magni nihil id.</p>
+
+        <ul>
+            <li>Bantam
+                <ul>
+                    <li>Option 1</li>
+                    <li>Option 2</li>
+                </ul>
+            </li>
+            <li>Easter Egger</li>
+            <li>Third</li>
+        </ul>
+
+        <table>
+            <thead>
+                <caption> This is a table</caption>
+                <tr>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Nils</td>
+                    <td>Man</td>
+                    <td>23</td>
+                </tr>
+                <tr>
+                    <td>Joel</td>
+                    <td>Man</td>
+                    <td>25</td>
+                </tr>
+            </tbody>
 
 
-    <h2>Intro</h2>
-    <p>Pangolins, sometimes known as scaly anteaters, are mammals of the order Pholidota (from Ancient Greek φολῐ́ς,
-        "horny scale"). The one extant family, Manidae, has three genera: Manis, Phataginus and Smutsia. Manis comprises
-        the four species found in Asia, while Phataginus and Smutsia include two species each, all found in Sub-Saharan
-        Africa. These species range in size from 30 to 100 cm (12 to 39 in). A number of extinct pangolin species are
-        also known.</p>
-    <h2>Description</h2>
-    <p>Pangolins have large, protective keratin scales covering their skin; they are the only known mammals with this
-        feature. They live in hollow trees or burrows, depending on the species. Pangolins are nocturnal, and their diet
-        consists of mainly ants and termites, which they capture using their long tongues. They tend to be solitary
-        animals, meeting only to mate and produce a litter of one to three offspring, which they raise for about two
-        years.
-    </p>
-    <h2>Poaching</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad illum quas ab ipsam saepe. Itaque, minus! Numquam
-        nemo dolores natus provident, commodi, esse repudiandae sit amet temporibus magni nihil id.</p>
+        </table>
 
-    <ul>
-        <li>Bantam
-            <ul>
-                <li>Option 1</li>
-                <li>Option 2</li>
-            </ul>
-        </li>
-        <li>Easter Egger</li>
-        <li>Third</li>
-    </ul>
+        <form action="/tacos">
+            <p>
+                <label for="username">Enter a username</label>
+                <input type="text" placeholder="username" name="username">
+            </p>
+            <p>
+                <label for="password">Enter your password</label>
+                <input type="password" placeholder="sdfgsdf" name="password">
+            </p>
+            
+            <input type="text">
+            <input type="text">
 
+            <button type="submit">This is a button</button>
+
+        </form>
+
+        <div>
+            <label for="cheese"> Do you like cheese?</label>
+            <input type="checkbox" name="cheese" id="cheese">
+        </div>
+
+
+        <button>Submit</button>
+
+        <main>
 </body>
 
+
 </html>
-
-
