--- a/playing-around-with-css/css-testing.html
+++ b/playing-around-with-css/css-testing.html
@@ -36,7 +36,7 @@
 
 <div id=header>
     <button>
-        Click me
+        Click
     </button>
 </div>
 <div id="one" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, ratione vero est, delectus placeat pariatur esse veniam ea eius, molestiae ipsa omnis illum odio maiores nam sed iure distinctio consectetur.</div>
