--- a/firstProject/page.html
+++ b/firstProject/page.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="more-styles.css">
-    <script type="text/javascript" src="magic.js"></script>
+    <!-- <script src="magic.js"></script> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nils Wägmark</title>
 </head>
+
+
 <body>
-    <h1>My todo list</h1>
+    <h1>Nils Wägmark</h1>
     <ul>
         <li>"add" => add new item </li>
         <li>"delete" => delete item</li>
@@ -17,8 +19,13 @@
         <li>"quit" => quit app </li>
     </ul>
 
+<p>
+    This is my paragraph.
+</p>
+
 <button>
     Click me!
 </button>
 </body>
 </html>
+
