--- a/javascript/testing.html
+++ b/javascript/testing.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="images.css">
-    <script src="script.js"></script>
 </head>
 <body>
-   <h1>Hello</h1>
-   <p>¿Que pasa?</p>
+    <p>This is a paragraph</p>
 </body>
 </html>
