la till dagens grejer

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,16 +17,25 @@
     <a href="htttp://www.youtube.com">CLICK ME</a>
     <a href="style.css">Go to CSS file</a>
 
+    <form action="https://www.google.com/">
+        <label for="name">Enter your name:</label>
+        <input type="text" placeholder="Name" name="name" id="name"> 
+        <br>
+        <label for="password">Enter your password:</label>
+        <input type="password" placeholder="Password" name="password" id="password">
+        <br>
+        <label for="age">Enter your age:</label>
+        <input type="number" name="age" id="age"> 
+        <button>Submit</button>
+        <input type="submit">
+    </form>
+
 </div>
 
-<h2 id="myheader"> This is a header</h2>
-
-<style>
-    ol {
-        color:blueviolet;
-    }
-</style>
-
+<div>
+    <h2 id="myheader"> This is a header</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consectetur voluptatem aut eaque explicabo reiciendis nisi vero laborum perferendis, fugit minima minus earum ipsam dignissimos eum neque unde doloribus numquam.</p>
+</div>
   
     <ol>
         <li> <span class="name">Nils</span> </li>
@@ -52,8 +61,10 @@
         </p>
     </section>
 
+</div>
 
-    <table>
+
+<!--     <table>
         <thead>
             <th colspan="2"> Name</th>
             <th>Age</th>
@@ -72,30 +83,15 @@
             </tr>
         </tbody>
 
-    </table>
+    </table> -->
 
 
-    <form action="https://www.google.com/">
-        <label for="name">Enter your name:</label>
-        <input type="text" placeholder="Name" name="name" id="name"> 
-        <br>
-        <label for="password">Enter your password:</label>
-        <input type="password" placeholder="Password" name="password" id="password">
-        <br>
-        <label for="age">Enter your age:</label>
-        <input type="number" name="age" id="age"> 
-        <button>Submit</button>
-        <input type="submit">
-    </form>
 
-
-    <form action="https://www.google.com/search">
+<!--     <form action="https://www.google.com/search">
     <input type="text" name="q">
     <input type="checkbox" name="checked">
     </form>
-
- 
-
+ -->
 
 </body>
 </html>
