--- a/final-project/index3.html
+++ b/final-project/index3.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="app3.js"></script>
+    <link rel="stylesheet" href="style2.css">
 </head>
-<body>
-    <label for="color-button">Choose your background color:</label>
-    <button id = "color-button">Change background color</button>
 
+<body>
+    <div>
+        <form action="/Nils">
+            <label for="textfield"></label>
+            <input type="text" id="textfield" placeholder="Write something">
+        </form>
+        <button class = "button1">CLICK</button>
+        <button id = "button2">CLICK</button>
+        <button id = "button3">CLICK</button>
+        <button id = "button4">CLICK</button>
+        <button id = "button5">CLICK</button>
+        <button id = "button6">CLICK</button>
+        <button id = "button7">CLICK</button>
+    </div>
 </body>
 </html>
