lade till lite grejer

--- a/final-project/index3.html
+++ b/final-project/index3.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <form action="/Nils">
+        <form action="/Nils" id="myForm">
             <label for="textfield"></label>
             <input type="text" id="textfield" placeholder="Write something">
         </form>
