--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="app2.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
+    <title>Document</title>
 </head>
+
 <body>
-    <h1>This is a title</h1>
-    <button id = "button">Click me</button>
-    <button id = "button2">Click me</button>
+    <h1>PingPong</h1>
 </body>
+
 </html>
