--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
-    <h1>PingPong</h1>
+    <p>Ping Pong scorekeeper</p>
+    <h2>0</h2>
+    <h2>to</h2>
+    <h2>0</h2>
+    <label for="points">Playing to</label>
+    <select name="points" id="points">
+        <option value="1">5</option>
+        <option value="1">6</option>
+        <option value="1">7</option>
+        <option value="1">8</option>
+        <option value="1">9</option>
+    </select>
+    <br>
+    <button id="button1">+1 Player 1</button>
+    <button id="button2">+1 Player 2</button>
+    <button id="buttonReset">Reset</button>
+
 </body>
 
 </html>
