--- a/apis/index.html
+++ b/apis/index.html
@@ -1,12 +1,23 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="api.js"></script>
-    <title>This is my blog</title>
+    <title>Document</title>
 </head>
+
 <body>
+    <h1>Hello world!</h1>
+    <button>Click to get a new Star wars character:</button>
+    <ol id="starWars">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+    <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </body>
 
-
+</html>
